--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,21 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     env_file:
       - .env
     volumes:
       - ./:/app
     restart: always
+    command: >
+      bash -c "
+        echo 'Waiting for database to be ready...' &&
+        sleep 5 &&
+        cd /app &&
+        alembic stamp initial_migration &&
+        uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+      "
 
   db:
     image: postgres:13
@@ -27,6 +36,11 @@ services:
     ports:
       - "5432:5432"
     restart: always
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
 volumes:
   postgres_data:
