--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,6 @@ SQLAlchemy==2.0.25
 psycopg2-binary==2.9.9
 pydantic-settings==2.8.1
 alembic==1.13.1
+Jinja2==3.1.4
+python-multipart==0.0.9
+itsdangerous==2.2.0
